# llm-stochastic-collector

./: .gitignore  AGENTS.md  README.md  classification_report.json  doc.md  pyproject.toml
collector/: __main__.py  aggregator.py  bpe_manager.py  cache_manager.py  runner.py  serializer.py  visualizer.py
docs/: backlog.md  data_schema.md  design.md  experiment_protocol.md  requirements.md  runbook.md
scripts/: classify_responses.py  compress_json.py
src/prompt_multiple/: __init__.py
