[project]
name = "prompt-multiple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ainem-m", email = "ainemmikkeler@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "graphviz>=0.21",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
